# adventofcode2022

./: .gitignore  README.md
Day 23/: Day 23.csproj  Day 23.sln
day 1/: main.s
day 1/src/: main.rs
day 10/: Program.fs  day 10.fsproj  main.lua
day 11/: Program.fs  day 11.fsproj
day 12/: main.clj  main.m
day 13/: Main.scala  main.go
day 14/: main.m
day 15/: main.go
day 16/: main.py
day 17/: main.jl
day 18/: main.r
day 19/: input  main.ts  package.json
day 2/: main.sh
day 2/src/: main.rs
day 20/: main.c  main.swift
day 21/: .clang-format  main.c
day 22/: day_22.dart
day 23/: day_23.dart
day 23/Day 23/: Program.cs
day 24/: main.hs
day 25/: main.rb
day 3/: main.apl
day 3/src/: main.rs
day 4/: Cargo.toml  main.v
day 4/src/: main.rs
day 5/src/: main.rs
day 6/: CMakeLists.txt  main.exs
day 6/src/: main.cpp
day 7/: CMakeLists.txt  vcpkg.json
day 7/include/: tree.hpp
day 7/src/: main.cpp
day 8/src/: main.kt
day 9/: main.java
day 9/src/: main.kt
